--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <Html><head>
-<link rel="stylesheet" href="./material.min.css">
-<script src="./material.min.js"></script>
+<link rel="stylesheet" href="/material.min.css">
+<script src="/material.min.js"></script>
 
-<link rel="stylesheet" href="materialicons.css">
+<link rel="stylesheet" href="/materialicons.css">
   </head>
   <Body>
  
 <style>
 .demo-layout-transparent {
-  background: url('../assets/demos/transparent.jpg') center / cover;
+  background: url('../asset') center / cover;
 }
 .demo-layout-transparent .mdl-layout__header,
 .demo-layout-transparent .mdl-layout__drawer-button {
