--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <Html><head>
 <link rel="stylesheet" href="/material.min.css">
 <script src="/material.min.js"></script>
-
-<link rel="stylesheet" href="/materialicons.css">
+  <script src='/jquery-3.1.1.slim.min.js'></script>
+  <link rel="stylesheet" href="/materialicons.css">
+  <script>
+    $(function() {
+    $('body').vegas({
+        slides: [
+            { src: '/2016-01-17_16.33.59-01.jpeg' },
+            { src: '/2016-01-17_16.46.42-01.jpeg' },
+            { src: '/2016-01-17_17.06.11-01.jpeg' },
+          { src: '/2016-01-18_07.39.07-1-01.jpeg' },
+        ]
+    });
+});
+    </script>
   </head>
   <Body>
  
