--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <script src="/material.min.js"></script>
   <script src='/jquery-3.1.1.slim.min.js'></script>
   <link rel="stylesheet" href="/materialicons.css">
-  <script>
-    $(function() {
+   <link rel="stylesheet" href="/vegas.min.css">
+  <script src="/vegas.min.js"></script>
+  <script>    $(function() {
     $('body').vegas({
         slides: [
             { src: '/2016-01-17_16.33.59-01.jpeg' },
