--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="/vegas.min.js"></script>
   <script>    $(function() {
     $('body').vegas({
+      timer: false,
         slides: [
             { src: '/2016-01-17_16.33.59-01.jpeg' },
             { src: '/2016-01-17_16.46.42-01.jpeg' },
