--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="/vegas.min.css">
   <script src="/vegas.min.js"></script>
   <script>    $(function() {
-    $('body').vegas({
+    $('.demo-layout-transparent').vegas({
       timer: false,
         slides: [
             { src: '/2016-01-17_16.33.59-01.jpeg' },
@@ -21,9 +21,7 @@
   <Body>
  
 <style>
-.demo-layout-transparent {
-  background: url('../asset') center / cover;
-}
+
 .demo-layout-transparent .mdl-layout__header,
 .demo-layout-transparent .mdl-layout__drawer-button {
   /* This background is dark, so we set text to white. Use 87% black instead if
