--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <Html><head>
+  <meta name=viewport content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/material.min.css">
 <script src="/material.min.js"></script>
   <script src='/jquery-3.1.1.slim.min.js'></script>
